navbar icon spacing issue solved -PK

--- a/simply/public_html/scss/_navbar.scss
+++ b/simply/public_html/scss/_navbar.scss
@@ -109,6 +109,9 @@ nav{
                 a{
                     text-decoration: none;
                     color:$navbar_font_color;
+                    i{
+                        margin-right: 5px;
+                    }
                     @media(max-width:1240px){
                         font-size:12px;
                     }
