--- a/simply/public_html/scss/simply.scss
+++ b/simply/public_html/scss/simply.scss
@@ -17,14 +17,10 @@ $body_background:#fff;
 @import "panels.scss";
 @import "_cards.scss";
 @import "_drop-downs.scss";
-
-
-
-
-
-
-
-
+@import "_form.scss";
+*{
+    box-sizing: border-box;
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
